<resources>
    <string name="app_name">ParkIt-Entry-Scanner</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="label_configure_scanner">Configure Entry Scanner</string>
    <string name="label_scan_qr_code">Scan QR Code</string>
    <string name="label_parkit_nav_drawer">Entry Scanner Navigation</string>
    <string name="title_activity_scanner_configuration">Scanner Configuration</string>
    <string name="label_parking_lot_id">Parking Lot ID</string>
    <string name="label_vehicle_type">Vehicle Type</string>
    <string name="label_save_config">Save Configuration</string>

    <array name="vehicle_type_models">
        <item>two_wheeler</item>
        <item>four_wheeler</item>
        <item>heavy_vehicle</item>
    </array>

    <array name="vehicle_type_views">
        <item>Two wheeler</item>
        <item>Four wheeler</item>
        <item>Heavy vehicle</item>
    </array>
    <string name="title_activity_configuration_login">Pass Key Verification</string>
    <string name="label_config_login_pass">Configuration Pass Key</string>
    <string name="hint_config_login_pass">Configuration Pass Key …</string>
    <string name="label_config_login_btn">Verify Key</string>
    <string name="label_clear_config_btn">Clear Scanner Configuration</string>
    <string name="label_api_host_address">API Host Address</string>
    <string name="label_refresh_api">Refresh API Configuration</string>
    <string name="hint_api_host_address">host address ex: 192.168.1.1 …</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="hint_parking_lot_id">Parking Lot ID …</string>





</resources>
